Issue #2078825 by RoySegall: Fixed CSS settings overlaps other places.

--- a/css/inline_devel.css
+++ b/css/inline_devel.css
@@ -2,7 +2,7 @@
   position: relative;
 }
 
-#edit-op {
+.page-devel-php #edit-op {
   float: right;
   color: #fff;
   padding: 8px 14px 10px;
@@ -21,7 +21,7 @@
   text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.5);
 }
 
-#edit-op:active {
+.page-devel-php #edit-op:active {
   position: relative;
   top: 3px;
   -webkit-box-shadow: inset 0px -3px 1px rgba(255, 255, 255, 1), inset 0 0px 3px rgba(0, 0, 0, 0.9);
@@ -29,7 +29,7 @@
   box-shadow: inset 0px -3px 1px rgba(255, 255, 255, 1), inset 0 0px 3px rgba(0, 0, 0, 0.9);
 }
 
-#edit-op:active:after {
+.page-devel-php #edit-op:active:after {
   content: "";
   width: 100%;
   height: 3px;
