--- a/inline_devel_logs/css/inline_devel_logs.css
+++ b/inline_devel_logs/css/inline_devel_logs.css
@@ -2,7 +2,7 @@
   float: right;
 }
 
-#edit-history {
+.page-devel-php #edit-history {
   float: left;
   color: #fff;
   padding: 8px 14px 10px;
@@ -23,7 +23,7 @@
   margin-right: 10px;
 }
 
-#edit-history:active {
+.page-devel-php #edit-history:active {
   position: relative;
   top: 3px;
   -webkit-box-shadow: inset 0px -3px 1px rgba(255, 255, 255, 1), inset 0 0px 3px rgba(0, 0, 0, 0.9);
@@ -31,7 +31,7 @@
   box-shadow: inset 0px -3px 1px rgba(255, 255, 255, 1), inset 0 0px 3px rgba(0, 0, 0, 0.9);
 }
 
-#edit-history:active:after {
+.page-devel-php #edit-history:active:after {
   content: "";
   width: 100%;
   height: 3px;
